manifests/40-gateway-api/gatewayclass-aux.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: infra-gateway
spec:
  controllerName: openshift.io/gateway-controller/v1
