manifests/40-gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: openshift-ai-inference
  namespace: openshift-ingress 
spec:
  gatewayClassName: openshift-ai-inference 
  listeners:
  - name: http 
    # TODO: How to handle hostname and certificate?
    hostname: "REPLACE_ME"
    port: 80
    protocol: HTTP
    #tls:
      #mode: Terminate
      #certificateRefs:
      #- name: REPLACE_ME
    allowedRoutes:
      namespaces:
        from: All
